--- a/themes/core/style.css
+++ b/themes/core/style.css
@@ -24,6 +24,14 @@ body{margin:0;padding:0;color:#333;background-color:#fff;
 #main {min-height:300px;}
 #footer {font-size:0.80em;color:#666;background-color:#eee;}
 
+/**
+* Login menu
+*/
+#login-menu{float:right;font-size:smaller;}
+#login-menu img.gravatar{vertical-align:middle;}
+#login-menu a{text-decoration:none;}
+#login-menu a:hover{text-decoration:underline;}
+
 
 /**
 * Banner
@@ -58,6 +66,19 @@ a:active {}
 */
 h1{border-bottom:3px double #ccc;padding-bottom:4px;}
 h2{border-bottom:1px solid #ccc;padding-bottom:4px;}
+
+
+/**
+* Forms
+*/
+input{font:inherit;}
+input[readonly]{color:#666;}
+label{font-size:smaller;}
+
+.validation-failed{border:2px solid red;}
+.validation-message{color:red;font-size:smaller;}
+.form-action-link{font-size:smaller;}
+
 
 /**
 * User feedback message wrappers.
