--- a/themes/grid/style.css
+++ b/themes/grid/style.css
@@ -147,12 +147,20 @@ label { font-size:smaller; }
   font-size:smaller;
 }
 .form-action-link { font-size:smaller; }
+textarea {
+  width:100%;
+  height:8em;
+}
 .content-edit input[type=text] { width:30em; }
 .content-edit textarea {
   width:40em;
   height:15em;
 }
-html { background-color:#eeeeee; }
+html {
+  background-color:#eeeeee;
+  overflow:-moz-scrollbars-vertical;
+  overflow-y:scroll;
+}
 body {
   margin:0;
   padding:0;
@@ -160,8 +168,7 @@ body {
   background-color:#ffffff;
 }
 #outer-wrap-header {
-  height:88px;
-  margin-top:11px;
+  padding-top:11px;
   margin-bottom:11px;
 }
 #inner-wrap-header {
@@ -182,7 +189,7 @@ body {
 }
 #login-menu {
   float:right;
-  font-size:smaller;
+  font-size:0.95em;
 }
 #login-menu img.gravatar { vertical-align:middle; }
 #login-menu a { text-decoration:none; }
@@ -211,6 +218,29 @@ body {
   text-align:center;
   font-size:1.5em;
   padding-left:10px;
+}
+#navbar ul.menu {
+  list-style-type:none;
+  padding:2px 8px;
+  margin:0;
+}
+#navbar ul.menu li {
+  padding:0;
+  margin:0;
+  display:inline;
+}
+#navbar ul.menu li a {
+  padding:6px 8px;
+  text-decoration:none;
+  border:2px solid transparent;
+}
+#navbar ul.menu li a:hover {
+  background:#dddddd;
+  border:2px solid #999999;
+}
+#navbar ul.menu li a.selected {
+  background:#cccccc;
+  border:2px solid #999999;
 }
 #inner-wrap-flash {
   width:960px;
@@ -273,6 +303,11 @@ body {
   width:300px;
   margin:0 10px;
 }
+#sidebar .box {
+  border-top:4px double #cccccc;
+  padding-top:11px;
+  margin-bottom:51px;
+}
 #inner-wrap-triptych {
   width:960px;
   margin:0 auto;
@@ -311,7 +346,6 @@ body {
   float:left;
   width:220px;
   margin:0 10px;
-  font-size:0.9em;
   margin-top:1em;
   height:100%;
   background-color:rgba(255,255,255,0.5);
